--- a/css/style.css
+++ b/css/style.css
@@ -36,4 +36,32 @@
 
     .city {
         text-align: center;
+        margin: 10px 0;
+            justify-content: space-between;
+            padding: 30px 0;
+            border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
     }
+        .city:last-child {
+            border: none;
+        }
+    
+        .date {
+            opacity: 0.7;
+        }
+    
+        .time {
+            font-size: 48px;
+            font-weight: bold;
+        }
+    
+        .time small {
+            font-size: 24px;
+            vertical-align: middle;
+            line-height: 48px;
+        }
+    
+        footer {
+            text-align: center;
+            font-size: 18px;
+            color: rgba(0, 0, 0, 0.8);
+        }
